Add raw solution

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,13 @@ body {
 a {
   color: #00B7FF;
 }
+
+.mpqr-content {
+  text-align: center;
+}
+
+.mpqr-qr-code {
+  margin: 0 auto;
+  width: 200px;
+  height: 200px;
+}
