--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,9 @@
 doctype html
-html
+html(lang="en")
   head
-    title= title
+    title Multi platform QR code example
     link(rel='stylesheet', href='/stylesheets/style.css')
+    meta(name="robots" content="noindex, nofollow")
   body
-    block content
+    .mpqr-content
+      block content
